<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.findmy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.findmy.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_navigation_map_to_navigation_add_poi"
            app:destination="@id/navigation_add_poi"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/navigation_map"
            app:popUpToInclusive="true" />
    </fragment>


    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.example.findmy.ui.friends.FriendsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.findmy.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_add_poi"
        android:name="com.example.findmy.AddPOIFragment"
        android:label="@string/title_add_poi"
        tools:layout="@layout/fragment_add_p_o_i" />
</navigation>